--- a/Bookstore/Views/Shared/_Layout.cshtml
+++ b/Bookstore/Views/Shared/_Layout.cshtml
@@ -38,35 +38,30 @@
                 </div>
                 <div class="navbar-collapse collapse d-sm-inline-flex">
 
-                    <ul class="navbar-nav flex-grow-2">
-                        <li>
-                            <a class="nav-link text-warning" asp-area="Admin" asp-controller="Book" asp-action="Index">Books</a>
-                        </li>
-                        <li>
-                            <a class="nav-link text-warning" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
-                        </li>
-
-                        <li class="nav-item dropdown">
-                            <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown
-                            </button>
-                            <ul class="dropdown-menu dropdown-menu-dark">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-
                     @if (httpContext.Session.GetInt32("Username") != null)
                     {
                         int? idUserFromHttpContext = httpContext.Session.GetInt32("Username");
 
                         User user = db.User.FirstOrDefault(u => u.UserId == idUserFromHttpContext);
 
+                        if (db.Roles.Find(user.UserId) != null)
+                        {
+                            <ul class="navbar-nav flex-grow-1">
+                                <li class="nav-item dropdown">
+                                    <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Manager
+                                    </button>
+                                    <ul class="dropdown-menu dropdown-menu-dark">
+                                        <li><a class="dropdown-item" asp-area="Admin" asp-controller="Book" asp-action="Index">Books</a></li>
+                                        <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        }
+
                         if (user != null)
                         {
-                            <ul class="navbar-nav flex-grow-1 justify-content-end">                                   
+                            <ul class="navbar-nav flex-grow-1 justify-content-end">
                                 <li>
                                     <a class="nav-link text-light" asp-area="" asp-controller="" asp-action=""><i class="bi bi-bookmark-fill"></i>Wish List</a>
                                 </li>
@@ -117,8 +112,7 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
