add goout add link on reg or login

--- a/Bookstore/Areas/Identity/Views/User/LogIn.cshtml
+++ b/Bookstore/Areas/Identity/Views/User/LogIn.cshtml
@@ -20,6 +20,9 @@
             <div class="mt-2">
                 <button type="submit" class="btn btn-success">LogIn</button>
             </div>
+            <div class="mt-2">
+                <a asp-area="Identity" asp-controller="User" asp-action="Registration" class="btn btn-link">Registration</a>
+            </div>
         </form>
     </div>
 </div>
