--- a/Bookstore/Areas/Identity/Views/User/Registration.cshtml
+++ b/Bookstore/Areas/Identity/Views/User/Registration.cshtml
@@ -36,8 +36,13 @@
                     <span asp-validation-for="PhoneNumber" class="text-danger"></span>
                 </div>
             </div>
-            <div class="mt-2">
-                <button type="submit" class="btn btn-success">LogIn</button>
+            <div class="row">
+                <div class="mt-2">
+                    <button type="submit" class="btn btn-success">Registration</button>
+                </div>
+                <div class="mt-2">
+                    <a asp-area="Identity" asp-controller="User" asp-action="LogIn" class="btn btn-link">LogIn</a>
+                </div>
             </div>
         </form>
     </div>
