--- a/Bookstore/Views/Shared/_Layout.cshtml
+++ b/Bookstore/Views/Shared/_Layout.cshtml
@@ -73,6 +73,11 @@
                                     </a>
                                 </li>
                                 <li>
+                                    <a class="nav-link text-light" asp-area="Customer" asp-controller="Orders" asp-action="Index" asp-route-bookId="null">
+                                        <i class="bi bi-box-seam"></i>Orders
+                                    </a>
+                                </li>
+                                <li>
                                     <a class="nav-link text-light" asp-area="" asp-controller="" asp-action="">
                                         <i class="bi bi-chat-dots-fill"></i> Messages
                                     </a>
