--- a/Bookstore/Areas/Purchase/Views/Purchase/Index.cshtml
+++ b/Bookstore/Areas/Purchase/Views/Purchase/Index.cshtml
@@ -1,30 +1,24 @@
-﻿@inject IHttpContextAccessor HttpContextAccessor
-@{
-    var httpContext = HttpContextAccessor.HttpContext;
+﻿@{
+       
 }
 
-@inject ApplicationDbContext DB
-@{
-    var db = DB;
-}
-
-
-<div class="container">
+<div class="container mx-auto">
     <h1>Оплата</h1>
-    <form asp-area="Purchase" asp-controller="Payment" asp-action="ProcessPayment" method="post">
-        <div class="form-group">
-            <label for="cardNumber">Номер карты</label>
-            <input type="text" class="form-control" id="cardNumber" name="CardNumber">
-        </div>
-        <div class="form-group">
-            <label for="expirationDate">Срок действия</label>
-            <input type="text" class="form-control" id="expirationDate" name="ExpirationDate">
-        </div>
-        <div class="form-group">
-            <label for="cvv">CVV</label>
-            <input type="text" class="form-control" id="cvv" name="CVV">
-        </div>
-        <button type="submit" class="btn btn-primary">Оплатить</button>
-    </form>
+    <div class="row">
+        <form asp-area="Purchase" asp-controller="Payment" asp-action="ProcessPayment" method="post">
+            <div class="form-group">
+                <label for="cardNumber">Номер карты</label>
+                <input type="number" class="form-control" id="cardNumber" name="CardNumber">
+            </div>
+            <div class="form-group">
+                <label for="expirationDate">Срок действия</label>
+                <input type="date" class="form-control" id="expirationDate" name="ExpirationDate">
+            </div>
+            <div class="form-group">
+                <label for="cvv">CVV</label>
+                <input type="number" class="form-control" id="cvv" name="CVV">
+            </div>
+            <button asp-area="Purchase" asp-controller="Purchase" asp-action="FundsVerification" asp-route-purchaseАmount="@ViewBag.Number" class="btn btn-primary mt-3">Buy</button>
+        </form>
+    </div>
 </div>
-
