--- a/Bookstore/Areas/Customer/Views/Orders/Index.cshtml
+++ b/Bookstore/Areas/Customer/Views/Orders/Index.cshtml
@@ -1,1 +1,61 @@
-﻿<h1>Orders</h1>
+﻿@inject IHttpContextAccessor HttpContextAccessor
+@{
+    var httpContext = HttpContextAccessor.HttpContext;
+}
+
+@inject ApplicationDbContext DB
+@{
+    var db = DB;
+}
+@{
+    var userId = HttpContextAccessor.HttpContext.Session.GetInt32("Username");
+    var order = db.Order.Where(u => u.UserId == userId).FirstOrDefault();
+}
+
+<h1>Orders</h1>
+<div>
+    <div class="form-group">
+        <label asp-for="@order.UserId"></label>
+        <input asp-for="@order.UserId" class="form-control" />
+    </div>
+    @*<div class="form-group">
+        <label asp-for="@order.ProductData"></label>
+        <input asp-for="@order.ProductData" class="form-control" />
+    </div>*@
+    <div class="form-group">
+        <label asp-for="@order.PurchaseDate"></label>
+        <input asp-for="@order.PurchaseDate" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="@order.PurchaseAmount"></label>
+        <input asp-for="@order.PurchaseAmount" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="@order.OrderStatus"></label>
+        <input asp-for="@order.OrderStatus" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="@order.CurrentPosition"></label>
+        <input asp-for="@order.CurrentPosition" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="@order.DeliveryAddress"></label>
+        <input asp-for="@order.DeliveryAddress" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="@order.TravelHistory"></label>
+        <input asp-for="@order.TravelHistory" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="@order.isCourierDelivery"></label>
+        <input asp-for="@order.isCourierDelivery" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="@order.Region"></label>
+        <input asp-for="@order.Region" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="@order.City"></label>
+        <input asp-for="@order.City" class="form-control" />
+    </div>
+</div>
